--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "antd": "^5.9.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "mqtt": "^5.0.5",
@@ -25,6 +26,7 @@
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "react-use-websocket": "^4.4.0",
+    "recharts": "^2.8.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
